--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "tronweb",
-    "version": "2.8.1",
+    "name": "tronweb-station",
+    "version": "1.0.0",
     "description": "JavaScript SDK that encapsulates the TRON HTTP API",
     "main": "dist/TronWeb.node.js",
     "scripts": {
@@ -28,7 +28,6 @@
         "elliptic": "^6.4.1",
         "ethers": "^4.0.7",
         "eventemitter3": "^3.1.0",
-        "injectpromise": "^1.0.0",
         "lodash": "^4.17.14",
         "semver": "^5.6.0",
         "validator": "^10.7.1"
@@ -87,7 +86,7 @@
             "url": "https://github.com/tron-us"
         }
     ],
-    "homepage": "https://github.com/tron-us/tronweb",
+    "homepage": "https://github.com/shenyongri110/tronweb",
     "license": "MIT",
-    "repository": "https://github.com/tron-us/tronweb.git"
+    "repository": "https://github.com/shenyongri110/tronweb.git"
 }
